log
Sun Apr 10 23:53:29 UTC 2022: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
d744a37
Sun Apr 10 23:55:04 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
eacc0ac
Sun Apr 10 23:55:27 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
771385b
Sun Apr 10 23:56:31 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
f2ad246
Sun Apr 10 23:56:44 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
948a9ac
Sun Apr 10 23:57:38 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
87bb191
Sun Apr 10 23:59:39 UTC 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
d6eec9a
Mon Apr 11 00:00:26 UTC 2022: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|0
077132f
Mon Apr 11 00:01:16 UTC 2022: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
836c947
Mon Apr 11 00:03:41 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8b29757
Mon Apr 11 00:09:40 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
6ae2d69
Mon Apr 11 00:15:21 UTC 2022: 
 hashmap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|0
a6bf490
Mon Apr 11 00:39:33 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
12e71c0
Mon Apr 11 00:47:02 UTC 2022: 
 hashmap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:110:34: error: expected ‘)’ before ‘{’ token
     if (position >= map->capacity{
                                  ^
hashmap.c:114:3: error: expected expression before ‘}’ token
   }
   ^
hashmap.c:115:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
7b9de9e
Mon Apr 11 00:47:32 UTC 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
569aa50
Mon Apr 11 00:48:48 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
65b0441
Mon Apr 11 00:50:19 UTC 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
e015db0
Mon Apr 11 00:51:58 UTC 2022: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:35: error: ‘position’ undeclared (first use in this function)
     if (is_equal(key,map->buckets[position]->key) != 0) return;
                                   ^~~~~~~~
hashmap.c:54:35: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c: In function ‘eraseMap’:
hashmap.c:93:35: error: ‘position’ undeclared (first use in this function)
     if (is_equal(key,map->buckets[position]->key) != 0){
                                   ^~~~~~~~
Compilation failed
309310b
Mon Apr 11 00:52:14 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:35: error: ‘position’ undeclared (first use in this function)
     if (is_equal(key,map->buckets[position]->key) != 0) return;
                                   ^~~~~~~~
hashmap.c:54:35: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4bc0a7b
Mon Apr 11 00:52:32 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b774ee0
Mon Apr 11 00:54:29 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ab5cc53
Mon Apr 11 01:32:23 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
7081525
Mon Apr 11 01:36:42 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:18: error: comparison between pointer and integer [-Werror]
         if (hash == 7)hash = 9;
                  ^~
hashmap.c:56:28: error: lvalue required as left operand of assignment
         if (hash == 7)hash = 9;
                            ^
cc1: all warnings being treated as errors
Compilation failed
6c5389d
Mon Apr 11 01:37:11 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
82b81d4
Mon Apr 11 01:37:28 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cd3f407
Mon Apr 11 01:39:56 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
5be09ce
Mon Apr 11 01:41:28 UTC 2022: 
 hashmap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  7|4
total_score: 30/70
c4c5c33
Mon Apr 11 01:47:04 UTC 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
052be2b
Mon Apr 11 01:49:33 UTC 2022: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘eraseMap’:
hashmap.c:97:33: error: statement with no effect [-Werror=unused-value]
     map->buckets[position]->key == NULL;
                                 ^
cc1: all warnings being treated as errors
Compilation failed
7b4b34a
Mon Apr 11 01:49:41 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|4
total_score: 30/70
0a982b7
Mon Apr 11 01:52:28 UTC 2022: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  8|4
total_score: 30/70
dca12c8
Mon Apr 11 02:06:14 UTC 2022: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘nextMap’:
hashmap.c:138:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
12eb1e2
Mon Apr 11 02:06:33 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|4
total_score: 30/70
5e7a288
